Created cmd-support-util module for functionality needed in all other modules to avoid circular dependencies. Extended validations for execution and allocations.

--- a/cordapp/build.gradle
+++ b/cordapp/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     // CorDapp dependencies
     // Specify your CorDapp's dependencies below, including dependent CorDapps.
     cordapp project(":cdm-support-contracts-states")
+    cordapp project(":cdm-support-util")
     cordapp project(":cdm-support")
 }
 
