--- a/clients/build.gradle
+++ b/clients/build.gradle
@@ -76,5 +76,21 @@ task runServerC1(type: JavaExec, dependsOn: assemble) {
     args '--server.port=10060', '--config.rpc.host=localhost', '--config.rpc.port=10006', '--config.rpc.username=user1', '--config.rpc.password=test', '--config.sshd.port=2224'
 }
 
+task runServerB2(type: JavaExec, dependsOn: assemble) {
+    classpath = sourceSets.main.runtimeClasspath
+    main = 'com.derivhack.webserver.ServerKt'
+    args '--server.port=10070', '--config.rpc.host=localhost', '--config.rpc.port=10012', '--config.rpc.username=user3', '--config.rpc.password=test', '--config.sshd.port=2225'
+}
 
+task runServerNotary(type: JavaExec, dependsOn: assemble) {
+    classpath = sourceSets.main.runtimeClasspath
+    main = 'com.derivhack.webserver.ServerKt'
+    args '--server.port=10080', '--config.rpc.host=localhost', '--config.rpc.port=10003', '--config.rpc.username=user4', '--config.rpc.password=test', '--config.sshd.port=2226'
+}
+
+task runServerObserver(type: JavaExec, dependsOn: assemble) {
+    classpath = sourceSets.main.runtimeClasspath
+    main = 'com.derivhack.webserver.ServerKt'
+    args '--server.port=10090', '--config.rpc.host=localhost', '--config.rpc.port=10015', '--config.rpc.username=user5', '--config.rpc.password=test', '--config.sshd.port=2227'
+}
 
